# CuboGenetico

./: CuboGenetico.tex  Makefile  Makefile.am  Makefile.am~  README.md  autogen.sh  config.status  configure.ac  configure.ac~  libtool
experimentos/: Makefile  cubo3x3.cpp  entrada.txt  entrada.txt~  entrada1.txt  entrada2.txt  entrada3.txt  entrada5.txt  entrada6.txt  entradac.txt  entradac.txt~  entradac1.txt  entradac1.txt~  entradac2.txt  exp122.txt  exp20r.txt  exp30ind.txt  exp40c.txt  exp40ind.txt  exp50ind.txt  exp59.txt  expc09.txt  expdani.txt  expdani1.txt  expdani2.txt
lib/: libfuncion.la
lib/agenetico/: Cubo2x2.vala  Cubo3x3.c  Cubo3x3.vala  Fenotipo.c  Fenotipo.vala  Genotipo.c  Genotipo.vala  Individuo.c  Individuo.vala  agenetico.h
lib/agenetico/.deps/: lib_libagenetico_la-Cubo2x2.Plo  lib_libagenetico_la-Cubo3x3.Plo  lib_libagenetico_la-Fenotipo.Plo  lib_libagenetico_la-Genotipo.Plo
lib/codificacion/: FenoGeno.c  FenoGeno.vala  codificacion.h
lib/cubo/: Cubo3x3.c  Cubo3x3.vala  Cubo3x3.vala~  cubo.h
lib/cubo/.deps/: lib_libcubo_la-Cubo3x3.Plo
lib/funcion/: FFitness.c  FFitness.vala
lib/test/: test-case.c  test-case.vala  test.h
lib/test/.deps/: lib_libtest_la-test-case.Plo
reporte/: CuboGenetico.tex
src/.deps/: AUmbrales-AUmbrales-main.Po  AUmbrales-AUmbrales.Po  AUmbrales-ModeloDB.Po
src/mx/unam/ciencias/hoc/: Corrector.c  Corrector.vala  Corrector.vala~  Criador.c  Criador.vala  CruzaUP.c  CruzaUP.vala  CuboGenetico-main.c  CuboGenetico-main.vala  CuboGenetico.c  CuboGenetico.vala  CuboGenetico.vala~  FFitness.c  FFitness.vala  FenoGeno.c  FenoGeno.vala  Individuo.c  Individuo.vala  Mutacion.c  Mutacion.vala  Mutacion.vala~  Poblacion.c  Poblacion.vala  SRuleta.c  SRuleta.vala  STorneo.c  STorneo.vala
src/mx/unam/ciencias/hoc/.deps/: CuboGenetico-CuboGenetico-main.Po  CuboGenetico-CuboGenetico.Po
test/: test-codificacion.c  test-codificacion.vala  test-cubo.vala~  test-cubo3x3.c  test-cubo3x3.vala  test-cubogenetico-main.c  test-cubogenetico-main.vala  test.vala
vapi/: cubo.vapi  test.vapi
